cabal-version:       2.2
name:                precisa
version:             2.0.0.0
synopsis:            PRECiSA (Program Round-off Error Certifier via Static Analysis) is a fully automatic analyzer for the estimation of round-off errors of floating-point valued functional expressions.
-- description:
homepage:            http://precisa.nianet.org
author:              Laura Titolo, Marco A. Feliu
maintainer:          laura.titolo@nianet.org
                     marco.feliu@nianet.org
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:

common deps
  default-language:    Haskell2010
  build-depends:
    base >=4.8,
    filepath >=1.4 && <1.5,
    containers >=0.5 && <0.7,
    directory >= 1.3,
    time >=1.5 && <1.10,
    floating-bits >=0.3 && <0.4,
    array >=0.5 && <0.6,
    pretty >=1.1 && <1.2,
    scientific >=0.3 && <0.4,
    mtl >= 2.2,
    optparse-applicative >= 0.14,
    process >= 1.4,
    tasty >=0.11,
    tasty-hunit >=0.9 && <0.10
  extra-libraries: stdc++ kodiak
  ghc-options: -fPIC -pgmlg++ "-dynload sysdep" -dynamic
  other-modules:
    AbsPVSLang
    AbsRawPVSLang
    AbsRawRealPVSLang
    AbsRawSpecLang
    AbsSpecLang
    AbstractDomain
    AbstractSemantics
    Common.ControlFlow
    Common.DecisionPath
    Common.ShowRational
    ErrM
    ErrorExpression
    FPrec
    FramaC.PrettyPrint
    Kodiak.Expression
    Kodiak.Generator
    Kodiak.Kodiak
    Kodiak.KodiakRunnable
    Kodiak.KodiakRunner
    MapPVSLangAST
    MapRealPVSLangAST
    MapSpecLangAST
    NumericalError
    Options
    Parser.LexDecisionPaths
    Parser.LexRawPVSLang
    Parser.LexRawRealPVSLang
    Parser.LexRawSpecLang
    Parser.ParDecisionPaths
    Parser.ParRawPVSLang
    Parser.ParRawRealPVSLang
    Parser.ParRawSpecLang
    Parser.Parser
    PPExt
    PVSCert
    SMT.GenerateSMTModel
    SMT.PrettyPrinter
    SMT.SMT
    Transformation
    TransformationUtils
    Translation.Float2Real
    Translation.Real2Float
    Utils

executable precisa
  import: deps
  main-is:
    Main.hs
  other-extensions:    MultiParamTypeClasses, FunctionalDependencies, CPP, RecordWildCards, GeneralizedNewtypeDeriving, MagicHash, ForeignFunctionInterface, NoMonomorphismRestriction, FlexibleInstances
  hs-source-dirs:      src
  build-tools:         alex, happy

test-suite PRECiSA-test-suite
  import: deps
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    src
    tests
  main-is:
    Test.hs
  other-modules:
    AbsPVSLangTest
    AbstractDomainTest
    AbstractSemanticsTest
    Common.ControlFlowTest
    Common.DecisionPathTest
    Common.ShowRationalTest
    Common.Test
    Kodiak.GeneratorTest
    Kodiak.Test
    SMT.ModelTest
    SMT.PrettyPrinterTest
    SMT.Test
    TransformationTest
    UtilsTest
