cabal-version:       3.0
name:                precisa
version:             3.2.0
synopsis:            PRECiSA (Program Round-off Error Certifier via Static Analysis) is a fully automatic analyzer for the estimation of round-off errors of floating-point valued functional expressions.
homepage:            http://precisa.nianet.org
author:              Laura Titolo, Marco A. Feliu
maintainer:          laura.titolo@nianet.org
                     marco.feliu@nianet.org
category:            Language
build-type:          Simple


common shared
  default-language:    Haskell2010
  ghc-options: -Wall
  build-depends:
      base                 >= 4.8
    , array                >= 0.5  && <0.6
    , containers           >= 0.5  && <0.7
    , directory            >= 1.3
    , extra
    , filepath             >= 1.4  && <1.5
    , FloatingHex          >= 0.4
    , floating-bits        >= 0.3  && <0.4
    , mtl                  >= 2.2
    , optparse-applicative >= 0.14
    , pretty               >= 1.1  && <1.2
    , process              >= 1.4
    , scientific           >= 0.3  && <0.4
    , time      >= 1.5 && <1.10
  extra-libraries:
    kodiak

library
  import: shared
  hs-source-dirs: src/
  exposed-modules:
    Precisa
    AbsPVSLang
    AbsRawPVSLang
    AbsRawRealPVSLang
    AbsRawSpecLang
    AbsSpecLang
    AbstractDomain
    AbstractSemantics
    Common.ControlFlow
    Common.DecisionPath
    Common.ShowRational
    Common.TypeConversions
    Common.TypesUtils
    FramaC.ACSLTypes
    FramaC.ACSLlang
    FramaC.CLang
    FramaC.GenerateACSL
    FramaC.PVS2C
    FramaC.Types
    FramaC.PrecisaPrelude
    ErrM
    PVSTypes
    FramaC.PrettyPrint
    Kodiak.Expression
    Kodiak.Generator
    Kodiak.Kodiak
    Kodiak.Paver
    Kodiak.PrettyPrint
    Kodiak.Runnable
    Kodiak.Runner
    MapPVSLangAST
    MapRealPVSLangAST
    MapSpecLangAST
    NumericalError
    Operators
    Options
    Parser.LexDecisionPaths
    Parser.LexRawPVSLang
    Parser.LexRawRealPVSLang
    Parser.LexRawSpecLang
    Parser.ParDecisionPaths
    Parser.ParRawPVSLang
    Parser.ParRawRealPVSLang
    Parser.ParRawSpecLang
    Parser.Parser
    PPExt
    PVSCert
    SMT.GenerateSMTModel
    SMT.PrettyPrinter
    SMT.SMT
    Transformation
    TransformationUtils
    Translation.Float2Real
    Translation.Real2Float
    Utils

executable precisa
  import: shared
  build-depends:
      base      >= 4.8
    , precisa
  hs-source-dirs: app/
  main-is:
    Main.hs

test-suite precisaTests
  import: shared
  ghc-options: -Wno-missing-signatures
  build-depends:
      base >=4.8
    , containers >=0.5 && <0.7
    , pretty >=1.1 && <1.2
    , mtl >= 2.2
    , tasty >=0.11
    , tasty-hunit >=0.9 && <0.10
    , precisa
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests/
  main-is:
    Main.hs
  other-modules:
    AbsPVSLangTest
    AbstractDomainTest
    AbstractSemanticsTest
    Common.ControlFlowTest
    Common.DecisionPathTest
    Common.ShowRationalTest
    Common.Test
    FramaC.GenerateACSLTest
    FramaC.PVS2CTest
    FramaC.PrettyPrint.CLangTest
    Kodiak.GeneratorTest
    Kodiak.ExpressionTest
    Kodiak.PaverTest
    Kodiak.PrettyPrintTest
    Kodiak.Test
    MapRealPVSLangASTTest
    SMT.ModelTest
    SMT.PrettyPrinterTest
    SMT.Test
    TransformationTest
    TransformationUtilsTest
    Translation.Real2FloatTest
    UtilsTest
