cabal-version:       3.0
name:                precisa
version:             4.0.4
synopsis:            PRECiSA (Program Round-off Error Certifier via Static Analysis) is a fully automatic analyzer for the estimation of round-off errors of floating-point valued functional expressions.
homepage:            https://nasa.github.io/precisa
author:              Laura Titolo, Marco A. Feliu
maintainer:          laura.titolo@nasa.gov
                     marco.feliu@nasa.gov
category:            Language
build-type:          Simple


common shared
  default-language:    Haskell2010
  build-depends:
      base                 >= 4.14
    , array                >= 0.5  && <0.6
    , containers           >= 0.5  && <0.7
    , directory            >= 1.3
    , extra
    , filepath             >= 1.4  && <1.5
    , FloatingHex          >= 0.4
    , keys
    , mtl                  >= 2.2
    , optparse-applicative >= 0.14
    , pretty               >= 1.1  && <1.2
    , process              >= 1.4
    , scientific           >= 0.3  && <0.4
    , time                 >= 1.5 && <1.10
    , ieee                 >= 0.7
    ,aeson
    ,bytestring
  extra-libraries:
    kodiak

library
  import: shared
  hs-source-dirs: src/
  exposed-modules:
    PRECiSA
    AbsFPCoreLang
    AbsPVSLang
    AbsRawPVSLang
    AbsRawSpecLang
    AbsSpecLang
    AbstractDomain
    AbstractSemantics
    Common.ControlFlow
    Common.DecisionPath
    Common.ShowRational
    Common.TypesUtils
    ErrM
    FPCore.FPCorePrinter
    FreshVariables
    Json
    Kodiak.Expression
    Kodiak.Generator
    Kodiak.Kodiak
    Kodiak.Paver
    Kodiak.PrettyPrint
    Kodiak.Runnable
    Kodiak.Runner
    MapFPCoreLangAST
    MapFPCoreSpecLangAST
    MapPVSLangAST
    MapRealPVSLangAST
    MapSpecLangAST
    FunctionCallErrorAbstraction
    Operators
    Options
    Parser.LexDecisionPaths
    Parser.LexFPCoreLang
    Parser.LexRawPVSLang
    Parser.LexRawSpecLang
    Parser.ParDecisionPaths
    Parser.ParFPCoreLang
    Parser.ParRawPVSLang
    Parser.ParRawSpecLang
    Parser.Parser
    PPExt
    PVSCert
    SMT.GenerateSMTModel
    SMT.PrettyPrinter
    SMT.SMT
    Translation.Float2Real
    Translation.Real2Float
    Utils
  ghc-options:

executable precisa
  import: shared
  ghc-options: -Wall
  build-depends:
      base      >= 4.14
    , precisa
  hs-source-dirs: app/
  main-is:
    Main.hs

test-suite precisaTests
  import: shared
  ghc-options: -Wno-missing-signatures
  build-depends:
      base >=4.14
    , containers >=0.5 && <0.7
    , pretty >=1.1 && <1.2
    , mtl >= 2.2
    , tasty >=0.11
    , tasty-hunit >=0.9 && <0.10
    , precisa
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests/
  main-is:
    Main.hs
  other-modules:
    -- AbsPVSLangTest
    -- AbstractDomainTest
    AbstractSemanticsTest
    Common.ControlFlowTest
    Common.DecisionPathTest
    Common.ShowRationalTest
    Common.Test
    -- FreshVariablesTest
    -- Kodiak.GeneratorTest
    FunctionCallErrorAbstractionTest
    Kodiak.ExpressionTest
    -- Kodiak.PaverTest
    Kodiak.PrettyPrintTest
    Kodiak.Test
    MapRealPVSLangASTTest
    MapFPCoreLangASTTest
    SMT.PrettyPrinterTest
    SMT.Test
    Translation.Real2FloatTest
    UtilsTest
